--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,12 +40,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/valkey/node-valkey.git"
+    "url": "git://github.com/firassziedan/node-valkey.git"
   },
   "bugs": {
-    "url": "https://github.com/valkey/node-valkey/issues"
+    "url": "https://github.com/firassziedan/node-valkey/issues"
   },
-  "homepage": "https://github.com/valkey/node-valkey/tree/master/packages/client",
+  "homepage": "https://github.com/firassziedan/node-valkey/tree/master/packages/client",
   "keywords": [
     "valkey"
   ]
