update test file

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,8 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ['18', '20']
-        valkey-version: ['5', '6.0', '6.2', '7.0', '7.2']
+        node-version: ['18', '20', '21']
     steps:
       - uses: actions/checkout@v4
         with:
@@ -34,14 +33,8 @@ jobs:
       - name: Build tests tools
         run: npm run build:tests-tools
       - name: Run Tests
-        run: npm run test -- -- --forbid-only --valkey-version=${{ matrix.valkey-version }}
-      - name: Upload to Codecov
-        run: |
-          curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import
-          curl -Os https://uploader.codecov.io/latest/linux/codecov
-          curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
-          curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
-          gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
-          shasum -a 256 -c codecov.SHA256SUM
-          chmod +x codecov
-          ./codecov
+        run: npm run test -- -- --forbid-only
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
