--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "valkey-client": "../packages/client",
     "hdr-histogram-js": "3.0.0",
-    "iovalkey": "5.3.2",
+    "iovalkey": "^0.0.1",
     "valkey-v1": "npm:valkey@1.0.0",
     "yargs": "17.7.2"
   }
