--- a/packages/test-utils/docker/Dockerfile
+++ b/packages/test-utils/docker/Dockerfile
@@ -2,7 +2,7 @@ ARG IMAGE
 FROM ${IMAGE}
 
 ARG REDIS_ARGUMENTS
-ENV REDIS_ARGUMENTS=${REDIS_ARGUMENTS}
+ENV REDIS_ARGUMENTS=${VALKEY_ARGUMENTS}
 
 COPY ./entrypoint.sh /
 
