--- a/packages/test-utils/docker/Dockerfile
+++ b/packages/test-utils/docker/Dockerfile
@@ -1,8 +1,8 @@
 ARG IMAGE
 FROM ${IMAGE}
 
-ARG REDIS_ARGUMENTS
-ENV REDIS_ARGUMENTS=${VALKEY_ARGUMENTS}
+ARG VALKEY_ARGUMENTS
+ENV VALKEY_ARGUMENTS=${VALKEY_ARGUMENTS}
 
 COPY ./entrypoint.sh /
 
