--- a/packages/graph/package.json
+++ b/packages/graph/package.json
@@ -13,7 +13,7 @@
     "documentation": "typedoc"
   },
   "peerDependencies": {
-    "valkey-client": "^1.0.0"
+    "valkey-client": "0.0.1"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
